--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper\StringHelps.cs" />
     <Compile Include="Tool\LogHelp.cs" />
+    <Compile Include="Tool\RMBHelp.cs" />
     <Compile Include="Tool\Tools.cs" />
     <Compile Include="Tool\Validator.cs" />
   </ItemGroup>
