--- a/RedisProject/App.config
+++ b/RedisProject/App.config
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
-    </startup>
+  <configSections>
+  </configSections>
+  <!--<RedisConfig WriteServerConStr="192.168.0.112:6379" ReadServerConStr="192.168.0.112:6379" DefaultDb="4" EnablePool="true"></RedisConfig>-->
+  <connectionStrings>
+  </connectionStrings>
+  <appSettings>
+    <!--单位分钟-->
+    <add key="RedisHost" value="192.168.0.112" />
+    <add key="RedisHostPort" value="6379" />
+    <add key="RedisPassword" value="" />
+    <add key="RedisDB" value="3" />
+  </appSettings>
 </configuration>
