--- a/NewMvc/Web.config
+++ b/NewMvc/Web.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="NewMvc.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
@@ -53,6 +58,18 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BasicHttpBinding_IWcfService" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:8092/Service1.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IWcfService"
+        contract="Service1.IService1" name="BasicHttpBinding_IWcfService" />
+    </client>
+  </system.serviceModel>
   <system.webServer>
     <modules>
       <remove name="TelemetryCorrelationHttpModule"/>
@@ -75,4 +92,11 @@
         warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <applicationSettings>
+    <NewMvc.Properties.Settings>
+      <setting name="NewMvc_TestService_TestDemo" serializeAs="String">
+        <value>http://localhost:8091/Demo/testdemo.asmx</value>
+      </setting>
+    </NewMvc.Properties.Settings>
+  </applicationSettings>
 </configuration>
